--- a/code/exploration/2021-10-13_explore-reviewer-comments.Rmd
+++ b/code/exploration/2021-10-13_explore-reviewer-comments.Rmd
@@ -13,10 +13,35 @@ knitr::opts_chunk$set(fig.path = "figures/2021-10-13_explore-reviewer-comments/"
 
 ```{r set-up}
 library("tidyverse")
+library("lubridate")
 
 fruit_traits <- readRDS(here::here("data", "clean", "fruit_traits.rds"))
 
 ```
+
+## Is temporal overlap in fruit production correlated with fruiting season duration (i.e. species that fruit for a long time will have a lot of other co-fruiting species)?
+
+```{r temporal-overlap-fruiting-duration}
+# original source of cofruit variable from Wright et al. 2016 Ecology
+wright_SI <- read.csv(here::here("data", "extra", "CensusTrapSp.csv"))
+
+# how many weeks in a year is fruit found for each species?
+wright_SI %>% 
+  group_by(sp) %>%
+  mutate(week = census %% 52) %>%
+  summarise(no_weeks = n_distinct(as.factor(week))) -> no_week_d
+
+# join to trait data and plot
+inner_join(fruit_traits, no_week_d, by = c("sp6" = "sp")) %>%
+  ggplot(aes(y = cofruit, x = no_weeks)) +
+  geom_point() +
+  xlab("Number of weeks in the year that fruit is found") +
+  ylab("Number of other species observed to fruit in the same week") +
+  theme_classic(base_size = 10)
+
+```
+
+Species which fruit at the same time as many other species in our dataset also fruit for a longer time period. This may increase the chance that they will be found by seed predators, and could have contributed to the positive correlation between temporal overlap in fruiting period and premature seed abscission.
 
 ## Is there a difference in fruit drop rates between plant species with different dispersal vectors?
 
@@ -95,7 +120,7 @@ broom.mixed::tidy(m, conf.int = TRUE) -> results
 results
 ```
 
-There is no difference in mean proportion of fruits prematurely abscised between species that were animal dispersed and those that were not (GLM, estimate = `r pluck(results, 4,2)` 95% CI [`r pluck(results, 8,2)`, `r pluck(results, 9,2)`], p = `r pluck(results, 7,2)` ).
+There is no difference in proportion of fruits prematurely abscised between species that were animal dispersed and those that were not (GLM, estimate = `r pluck(results, 4,2)` 95% CI [`r pluck(results, 8,2)`, `r pluck(results, 9,2)`], p = `r pluck(results, 7,2)`, n = 199).
 
 ## Did the proportion of fruits dropped increase as the overall fruit count increased?
 
@@ -126,3 +151,92 @@ fruit_traits %>%
 ```
 
 Seems to be no clear evidence for premature fruit drop being higher in years of high overall fruit production.
+
+## Flowering and fruiting phenology
+
+Reviewer suggested that the negative correlation between temporal variation in crop size and rates of premature fruit drop could instead be due to closer tracking of environmental conditions by the plant.
+
+i.e. a plant that tracks the environment closely avoids reproduction entirely in poor years while a plant that tracks the environment less closely initiates reproduction and must then abort immature fruit. 
+
+Species with a short time between flowering and fruiting could track the environment better than a species with extended fruit development. Fruit development time varies interspecifically from a couple of weeks to almost a full year. Would be difficult for a species that takes 11 months to develop fruit to anticipate the next 11 months of climate variation.
+
+If tracking of environmental conditions correlates with proportion of fruit prematurely abscised, we would expect to see short fruit development time -> low fruit drop
+
+```{r phenology}
+#  calculate fruit development time as overall mean fruiting date minus the overall mean flowering date
+# exclude species that fruit more than once in a year
+# then look at proportion abscised ~ fruit development time
+
+bci_phenology <- read.csv(here::here("data", "extra", "bci_phenology.csv"))
+
+seed_rain <- read.table(here::here("data", "raw", "BCI_TRAP200_20190215_spcorrected.txt"),
+                        header=TRUE, stringsAsFactors = FALSE)
+
+## clean seed rain data
+seed_rain$fecha <- as.character(seed_rain$fecha)
+seed_rain$fecha <- as.Date(seed_rain$fecha, "%Y-%m-%d")
+seed_rain$year <- format(as.Date(seed_rain$fecha), "%Y")
+seed_rain$day <- lubridate::yday(seed_rain$fecha)
+
+# date is from 1987-01-12 to 2019-01-29, we only want complete years so remove year=2019 and year=1987
+seed_rain <- subset(seed_rain, seed_rain$year != "1987" & seed_rain$year != "2019")
+
+# rename sp as sp4
+seed_rain <- rename(seed_rain, sp4 = sp)
+
+## calculate mean fruiting date (mature fruit, part 1) and 
+## mean flowering date (perfect female flowers, part 6) per species
+
+# flowering
+bci_phenology %>%
+  filter(type == "flw", period_2 == "annual") %>%
+  pull("sp") -> annual_flw
+
+seed_rain %>%
+  filter(sp4 %in% annual_flw, part == 6) %>%
+  group_by(sp4) %>%
+  summarise(mean_flw = mean(day), n = n()) -> mean_annual_flw
+
+# fruiting
+bci_phenology %>%
+  filter(type == "frt", period_2 == "annual") %>%
+  pull("sp") -> annual_frt
+
+seed_rain %>%
+  filter(sp4 %in% annual_frt, part == 1) %>%
+  group_by(sp4) %>%
+  summarise(mean_frt = mean(day), n = n()) -> mean_annual_frt
+
+# plot mean proportion abscised and (mean fruit date - mean flower date)
+fruit_traits %>%
+	select("sp4","year", "proportion_abscised") %>%
+	group_by(sp4) %>%
+	summarise(proportion_abscised_m = mean(proportion_abscised)) %>%
+  inner_join(mean_annual_frt, by = "sp4") %>% 
+  inner_join(mean_annual_flw, by = "sp4") %>% 
+  mutate(fruit_develop_time = abs(mean_frt - mean_flw)) %>%
+  ggplot(aes(y = proportion_abscised_m, x = fruit_develop_time)) +
+  geom_point() +
+  geom_smooth(colour = "blue", method = "lm", se = FALSE, size = 0.5)+
+  ylab("mean proportion of seeds prematurely abscised") +
+  xlab("mean fruit development time (days)") +
+  theme_classic(base_size = 9)
+
+# run a glm
+fruit_traits %>%
+  mutate(
+    abscised_seeds = round(abscised_seeds),
+    viable_seeds = round(viable_seeds)) %>% 
+  inner_join(mean_annual_frt, by = "sp4") %>% 
+  inner_join(mean_annual_flw, by = "sp4") %>% 
+  mutate(fruit_develop_time = abs(mean_frt - mean_flw)) -> fruit_traits_pheno
+
+m2 <- lme4::glmer(cbind(abscised_seeds, viable_seeds) ~ fruit_develop_time + (1|year) + (1|sp4),
+            family = binomial(logit), data = fruit_traits_pheno)
+
+broom.mixed::tidy(m2, conf.int = TRUE) -> results2
+results2
+
+```
+
+There is no correlation between proportion of fruits prematurely abscised and fruit development time (GLM, estimate = `r pluck(results2, 4,2)` 95% CI [`r pluck(results2, 8,2)`, `r pluck(results2, 9,2)`], p = `r pluck(results2, 7,2)`, n = 88 species).
